feat: add dashboard stats
